Small change in my website

--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,9 @@ Install Package
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello daa baadeh!</title>
+	<title>My Site</title>
 </head>
 <body>
-<h1>Vaa daa bundhamane!</h1>
+<h1>Hello World!</h1>
 </body>
 </html>
